# dumpfs

./: .content.xml  .dumpfs.context.md  .dumpfs.context.xml  Cargo.toml  README.md
src/: clipboard.rs  config.rs  error.rs  lib.rs  main.rs  report.rs  scanner.rs  tests.rs  tokenizer.rs  types.rs  utils.rs  writer.rs
src/git/: cache.rs  error.rs  mod.rs  progress.rs  repository.rs  url.rs
src/tokenizer/: cache.rs  error.rs  mod.rs  model.rs
src/tokenizer/provider/: anthropic.rs  huggingface.rs  mod.rs  openai.rs
tests/: clipboard_integration.rs
