[package]
name = "dumpfs"
version = "0.1.0"
edition = "2021"
description = "Generate XML representation of directory contents for LLM context"
authors = ["DumpFS Team"]
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
walkdir = "2.3"
quick-xml = "0.37.3"
rayon = "1.7"
indicatif = "0.17"
glob-match = "0.2"
chrono = "0.4"
once_cell = "1.18"
hostname = "0.4.0"
ignore = "0.4.21"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
