[package]
name = "dumpfs"
version = "0.1.0"
edition = "2021"
description = "Generate XML representation of directory contents for LLM context"
authors = ["kkharji"]
license = "MIT"

[dependencies]
clap = { version = "4.3", features = ["derive"] }
walkdir = "2.3"
quick-xml = "0.37.3"
rayon = "1.7"
indicatif = "0.17"
glob-match = "0.2"
chrono = "0.4"
once_cell = "1.18"
hostname = "0.4.0"
ignore = "0.4.21"
tabled = "0.18.0"
tokenizers = { version = "0.21.1",  features = ["http"] }
strum = { version = "0.27.1", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tiktoken-rs = "0.6.0"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.8"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
